--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -139,6 +139,7 @@ h2 {
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 
   section {
     color: $white;
